<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="action_settings">Settings</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="welcome">Welcome to Gitkit Demo</string>
    <string name="sign_in_label">SIGN IN</string>
    <string name="manage_account_label">Manage account</string>
    <string name="sign_out_label">Sign out</string>
    <string name="title_activity_navigation_drawer">Abelana</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_data_usage_title">Data usage</string>
    <string name="pref_network_connection_title">Transfer files only over Wi-Fi</string>
    <string name="pref_network_connection_summary">Uploading and updating of files will pause when Wi-Fi connection isn\'t available.</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_sign_out_title">Sign out</string>
    <string name="network_entries_item_1">Wi-Fi only</string>
    <string name="network_entries_item_2">Network or Wi-Fi</string>
    <string name="action_camera">Camera</string>
    <string name="title_activity_feed">Abelana</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_profile_visibility_title">Make my profile private</string>
    <string name="pref_profile_visibility_summary">Only approved followers will see your photos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_home">Home</string>
    <string name="action_profile">My Profile</string>
    <string name="action_friends">Friends</string>

    <!-- Upload navdrawer_header strings -->
    <string name="photo_upload_success_message">Success! Uploading photo...</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_friend_profile">Profile</string>
    <string name="friend_dialog_title">Enter your friend\'s email address</string>
    <string name="friend_dialog_hint">person@example.com</string>
    <string name="friend_dialog_positive">Follow</string>
    <string name="friend_dialog_negative">Cancel</string>
    <string name="wipeout_warning_message">This action cannot be undone!</string>
    <string name="wipeout_title">Erase all your data?</string>
    <string name="wipeout_positive">Erase</string>
    <string name="wipeout_success">Your data has been deleted.</string>
    <string name="wipeout_cancel">Cancel</string>
    <string name="splash_dialog_body"><![CDATA[
        This demo app is for educational purposes only.<br><br>
        <a href="https://abelana-222.appspot.com/tos.html">Terms of Service</a><br><br>
        <a href="https://abelana-222.appspot.com/privacy.html">Privacy Policy</a>
    ]]></string>
    <string name="ok">OK</string>
    <string name="splash_dialog_title">Abelana Demo</string>

</resources>
